...
    BuildContext context,
    SimulationService service,
  ) {
    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: const Text('End Simulation?'),
        content: const Text(
          'Are you sure you want to end this '
          'simulation and view your performance?',
        ),
        actions: [
          TextButton(
...
